<resources>
    <string name="app_name">LiteWebView</string>
    <string name="url_hint">https://example.com</string>
    <string name="open_website">Open Website</string>
    <string name="hls_status_title">HLS Status</string>
    <string name="hls_not_detected">● Not detected</string>
    <string name="hls_detected">● HLS Detected</string>
    <string name="server_title">NanoHTTPD</string>
    <string name="server_running">● Running :8080</string>
    <string name="server_stopped">● Stopped</string>
    <string name="lite_mode">Lite Mode</string>
    <string name="copy_address">Copy URL</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="show_webview">[ Show WebView ]</string>
    <string name="show_logs">[ Show Logs ]</string>
    <string name="mode_ip">IP</string>
    <string name="mode_local">Local</string>
    <string name="clear_logs">Clear</string>
    <string name="copy_logs">Copy</string>
</resources>
